# typedb-client-go

./: .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  README.md  Status.md  WORKSPACE  considerations.md  go.mod  go.sum  makefile
cluster/: BUILD.bazel  cluster_database.pb.go  cluster_database.proto  cluster_server.pb.go  cluster_server.proto  cluster_service.pb.go  cluster_user.pb.go  cluster_user.proto
common/: BUILD.bazel  answer.pb.go  answer.proto  concept.pb.go  concept.proto  logic.pb.go  options.pb.go  query.pb.go  query.proto  session.pb.go  transaction.pb.go
core/: BUILD.bazel  core_database.pb.go  core_service.pb.go
data/: BUILD.bazel  call.go  call_data.go  contract.go  contract_data.go  person.go  person_data.go  phone_calls_data.go  phone_example_data.go  queries.go
example/: BUILD.bazel  main.go
proto/: BUILD.bazel
proto/cluster/: BUILD.bazel  cluster_database.pb.go  cluster_database.proto  cluster_server.pb.go  cluster_server.proto  cluster_service.pb.go  cluster_service.proto  cluster_user.pb.go  cluster_user.proto
proto/common/: BUILD.bazel  answer.pb.go  answer.proto  concept.pb.go  concept.proto  logic.pb.go  logic.proto  options.pb.go  options.proto  query.pb.go  query.proto  session.pb.go  session.proto  transaction.pb.go  transaction.proto
proto/core/: BUILD.bazel  core_database.pb.go  core_database.proto  core_service.pb.go  core_service.proto
scripts/dev/: build.sh  rebuild.sh  stats.sh  test.sh
scripts/setup/: check_requirements.sh
src/: BUILD.bazel
src/client/: BUILD.bazel
src/client/v2/: BUILD.bazel  client.go  client_session.go  config.go  dbg.go  flags.go  manager_db_admin.go  manager_db_schema.go  manager_query.go  manager_query_utils.go  manager_session.go  manager_session_monitor.go  manager_session_state.go  manager_session_type.go  manager_transaction.go  monitor_session.go  request_attribute.go  request_concept.go  request_db.go  request_logic.go  request_proto_utils.go  request_query.go  request_relation.go  request_rule.go  request_schema.go  request_session.go  request_thing.go  request_tx.go  request_tx_stream.go  request_type.go  request_type_attribute.go  request_type_er_relation.go  request_type_role.go  request_type_thing.go  statusType.go  transaction_client.go  utils.go  workflow_admin.go  workflow_db.go  workflow_process.go  (+8 more)
src/client/v2/requests/: BUILD.bazel  request_attribute.go  request_concept.go  request_db.go  request_logic.go  request_proto_utils.go  request_query.go  request_relation.go  request_rule.go  request_schema.go  request_session.go  request_thing.go  request_tx.go  request_tx_stream.go  request_type.go  request_type_attribute.go  request_type_er_relation.go  request_type_role.go  request_type_thing.go  utils.go
src/cmd/: BUILD.bazel  main.go
src/common/: BUILD.bazel  error.go  label.go
src/err/: BUILD.bazel  error.go
src/type/: BUILD.bazel  label.go
src/type/common_type/: BUILD.bazel  answer.go  attribute.go  concept.go  concept_map.go  encoding.go  explainable.go  label.go  numeric.go  options.go  rule.go  thing.go  type.go  value_type.go
src/type/err_type/: BUILD.bazel  error.go
src/utils/: BUILD.bazel
src/utils/proto_utils/: BUILD.bazel  concept_util.go  option_util.go
test/: BUILD.bazel
test/client/: BUILD.bazel
test/client/a_pre_test/: BUILD.bazel  pre_test.go  utils_test.go
test/client/db_admin/: BUILD.bazel  workflow_db_test.go
test/client/query/: BUILD.bazel  query_insert_test.go  query_match_test.go  query_person_test.go  query_utils.go  workflow_query_stream_test.go  workflow_query_test.go
test/client/query_delete/: BUILD.bazel  query_delete_test.go
test/client/query_explain/: BUILD.bazel  query_explain_test.go  query_utils.go
test/client/query_insert/: BUILD.bazel  query_insert_test.go
test/client/query_insert_bulk/: BUILD.bazel  query_insert_bulk_test.go
test/client/query_update/: BUILD.bazel  query_update_test.go
test/client/schema/: BUILD.bazel  utils_test.go  workflow_schema_test.go
test/client/session/: BUILD.bazel  utils.go  workflow_session_test.go
test/client/utils/: BUILD.bazel  query_utils.go  shared.go  utils_convert.go  utils_db.go  utils_delete.go  utils_insert.go  utils_query.go  utils_schema.go  utils_update.go
test/client/z_post_test/: BUILD.bazel  post_test.go  utils_test.go
test/data/: BUILD.bazel  company.go  company_data.go  contract.go  schema.go
test/src/client/: BUILD.bazel  shared.go  utils.go  utils_query.go  utils_test.go  workflow_db_test.go  workflow_query_match_test.go  workflow_query_test.go  workflow_schema_test.go
test/src/client/db_admin/: BUILD.bazel  workflow_db_test.go
test/src/client/query/: BUILD.bazel  workflow_query_stream_test.go
test/src/client/schema/: BUILD.bazel  workflow_schema_test.go
test/src/client/utils/: BUILD.bazel  shared.go  utils_query.go
