package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES,
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/marvin-hansen/typedb-client-go/
gazelle(
    name = "gazelle",
    gazelle = "//:gazelle_binary",
)

filegroup(
    name = "build",
    srcs = [
        "//src:build",
    ],
    visibility = ["//visibility:public"],
)

k8s_objects(
    name = "link",
    objects = [
        "//cluster:cluster_go_proto_link",
        "//common:common_go_proto_link",
        "//core:core_go_proto_link",
    ],
    visibility = ["//visibility:public"],
)
