load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "example_lib",
    srcs = ["main.go"],
    importpath = "github.com/marvin-hansen/typedb-client-go/example",
    visibility = ["//visibility:private"],
    deps = [
        "//common",
        "//data",
        "//src/client/v2:client",
        "//test/client/utils",
    ],
)

go_binary(
    name = "example",
    embed = [":example_lib"],
    visibility = ["//visibility:public"],
)
