load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "typedb_protocol_proto",
    srcs = [
        "cluster_database.proto",
        "cluster_server.proto",
        "cluster_service.proto",
        "cluster_user.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//cluster:cluster_proto"],
)

go_proto_library(
    name = "typedb_protocol_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "go-typedb/proto/cluster",
    proto = ":typedb_protocol_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//cluster:cluster_database_proto",
        "//cluster:cluster_server_proto",
        "//cluster:cluster_user_proto",
    ],
)

go_library(
    name = "cluster",
    embed = [":typedb_protocol_go_proto"],
    importpath = "go-typedb/proto/cluster",
    visibility = ["//visibility:public"],
)
