load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@golink//proto:proto.bzl", "go_proto_link")

proto_library(
    name = "typedb_protocol_proto",
    srcs = [
        "cluster_database.proto",
        "cluster_server.proto",
        "cluster_service.proto",
        "cluster_user.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "typedb_protocol_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "go-typedb/proto/cluster",
    proto = ":typedb_protocol_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "cluster",
    embed = [":typedb_protocol_go_proto"],
    importpath = "go-typedb/proto/cluster",
    visibility = ["//visibility:public"],
)

go_proto_link(
    name = "cluster_go_proto_link",
    dep = ":typedb_protocol_go_proto",
    version = "v1",
    visibility = ["//visibility:public"],
)
