load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "typedb_protocol_proto",
    srcs = [
        "answer.proto",
        "concept.proto",
        "logic.proto",
        "options.proto",
        "query.proto",
        "session.proto",
        "transaction.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//common:common_proto"],
)

go_proto_library(
    name = "typedb_protocol_go_proto",
    importpath = "go-typedb/proto/common",
    proto = ":typedb_protocol_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//common:answer_proto",
        "//common:concept_proto",
        "//common:logic_proto",
        "//common:options_proto",
        "//common:query_proto",
    ],
)

go_library(
    name = "common",
    embed = [":typedb_protocol_go_proto"],
    importpath = "go-typedb/proto/common",
    visibility = ["//visibility:public"],
)
