load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@golink//proto:proto.bzl", "go_proto_link")

proto_library(
    name = "typedb_protocol_proto",
    srcs = [
        "answer.proto",
        "concept.proto",
        "logic.proto",
        "options.proto",
        "query.proto",
        "session.proto",
        "transaction.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "typedb_protocol_go_proto",
    importpath = "github.com/marvin-hansen/go-typedb/proto/common",
    proto = ":typedb_protocol_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "common",
    embed = [":typedb_protocol_go_proto"],
    importpath = "github.com/marvin-hansen/go-typedb/proto/common",
    visibility = ["//visibility:public"],
)

go_proto_link(
    name = "common_go_proto_link",
    dep = ":typedb_protocol_go_proto",
    version = "v1",
    visibility = ["//visibility:public"],
)
