load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "typedb_protocol_proto",
    srcs = [
        "core_database.proto",
        "core_service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//common:common_proto",
        "//core:core_proto",
    ],
)

go_proto_library(
    name = "typedb_protocol_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "go-typedb/proto/core",
    proto = ":typedb_protocol_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//common:session_proto",
        "//common:transaction_proto",
        "//core:core_database_proto",
    ],
)

go_library(
    name = "core",
    embed = [":typedb_protocol_go_proto"],
    importpath = "go-typedb/proto/core",
    visibility = ["//visibility:public"],
)
