load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@golink//proto:proto.bzl", "go_proto_link")

proto_library(
    name = "typedb_protocol_proto",
    srcs = [
        "core_database.proto",
        "core_service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//proto/common:typedb_protocol_proto"],
)

go_proto_library(
    name = "typedb_protocol_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/marvin-hansen/go-typedb/proto/core",
    proto = ":typedb_protocol_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/common"],
)

go_library(
    name = "core",
    embed = [":typedb_protocol_go_proto"],
    importpath = "github.com/marvin-hansen/go-typedb/proto/core",
    visibility = ["//visibility:public"],
)

go_proto_link(
    name = "core_go_proto_link",
    dep = ":typedb_protocol_go_proto",
    version = "v1",
    visibility = ["//visibility:public"],
)
