load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["main.go"],
    importpath = "go-typedb/src/cmd",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "build",
    srcs = [
        ":cmd",
    ],
    visibility = ["//visibility:public"],
)
