load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "build",
    srcs = [
        ":cmd",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "cmd",
    srcs = ["main.go"],
    importpath = "github.com/marvin-hansen/typedb-client-go/src/cmd",
    visibility = ["//visibility:public"],
)
