load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "build",
    srcs = [
        ":client",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "client",
    srcs = [
        "client.go",
        "client_session.go",
        "config.go",
        "dbg.go",
        "flags.go",
        "manager_query.go",
        "manager_session.go",
        "manager_transaction.go",
        "request_query.go",
        "request_tx_stream.go",
        "workflow_db.go",
        "workflow_query.go",
        "workflow_query_stream.go",
        "workflow_query_stream_util.go",
        "workflow_query_util.go",
        "workflow_schema.go",
        "workflow_utils.go",
    ],
    importpath = "github.com/marvin-hansen/typedb-client-go/src/client/v2",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//core",
        "//src/client/v2/requests",
        "@com_github_segmentio_ksuid//:ksuid",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
