load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "build",
    srcs = [
        ":client",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "client",
    srcs = [
        "client.go",
        "config.go",
        "flags.go",
        "manager_db_admin.go",
        "manager_db_schema.go",
        "manager_query.go",
        "manager_query_utils.go",
        "manager_session.go",
        "manager_session_monitor.go",
        "manager_session_state.go",
        "manager_session_type.go",
        "manager_transaction.go",
        "utils.go",
    ],
    importpath = "github.com/marvin-hansen/typedb-client-go/src/client/v2",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//core",
        "//src/client/v2/requests",
        "@com_github_segmentio_ksuid//:ksuid",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
