load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "build",
    srcs = [
        ":common_types",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "common_types",
    srcs = [
        "encoding.go",
        "value_type.go",
    ],
    importpath = "github.com/marvin-hansen/typedb-client-go/src/type/common_types",
    visibility = ["//visibility:public"],
)

go_library(
    name = "common_type",
    srcs = [
        "answer.go",
        "attribute.go",
        "concept.go",
        "encoding.go",
        "explainable.go",
        "label.go",
        "numeric.go",
        "options.go",
        "rule.go",
        "thing.go",
        "type.go",
        "value_type.go",
    ],
    importpath = "github.com/marvin-hansen/typedb-client-go/src/type/common_type",
    visibility = ["//visibility:public"],
)
