load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "build",
    srcs = [
        ":err_type",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "err_type",
    srcs = ["error.go"],
    importpath = "github.com/marvin-hansen/typedb-client-go/src/type/err_type",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pkg_errors//:errors"],
)
