load("@io_bazel_rules_go//go:def.bzl", "go_test")

filegroup(
    name = "build",
    testonly = True,
    srcs = [
        ":a_pre_test_test",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "a_pre_test_test",
    srcs = [
        "pre_test.go",
        "utils_test.go",
    ],
    deps = [
        "//src/client/v2:client",
        "//test/client/utils",
        "@com_github_stretchr_testify//assert",
    ],
)
