load("@io_bazel_rules_go//go:def.bzl", "go_test")

filegroup(
    name = "build",
    testonly = True,
    srcs = [
        ":db_admin_test",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "db_admin_test",
    testonly = True,
    srcs = ["workflow_db_test.go"],
    tags = ["db-admin"],
    deps = [
        "//src/client/v2:client",
        "//test/client/utils",
        "@com_github_stretchr_testify//assert",
    ],
)
