load("@io_bazel_rules_go//go:def.bzl", "go_test")

filegroup(
    name = "build",
    testonly = True,
    srcs = [
        ":query_test",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "query_test",
    srcs = [
        "workflow_query_stream_test.go",
        "workflow_query_test.go",
    ],
    tags = ["query"],
    deps = [
        "//data",
        "//src/client/v2:client",
        "//test/client/utils",
        "@com_github_stretchr_testify//assert",
    ],
)
