load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

filegroup(
    name = "build",
    testonly = True,
    srcs = [
        ":query_test",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "query_test",
    srcs = [
        "query_match_test.go",
        "query_person_test.go",
    ],
    embed = [":query"],
    tags = ["query"],
    deps = [
        "//common",
        "//src/client/v2:client",
        "//test/client/utils",
        "@com_github_stretchr_testify//assert",
    ],
)

go_library(
    name = "query",
    srcs = ["query_utils.go"],
    importpath = "github.com/marvin-hansen/typedb-client-go/test/client/query",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//test/client/utils",
    ],
)
