load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "query_insert",
    srcs = ["query_utils.go"],
    importpath = "github.com/marvin-hansen/typedb-client-go/test/client/query_insert",
    visibility = ["//visibility:public"],
    deps = [
        "//src/client/v2:client",
        "//test/client/utils",
    ],
)

go_test(
    name = "query_insert_test",
    srcs = ["query_insert_test.go"],
    embed = [":query_insert"],
    deps = [
        "//common",
        "//src/client/v2:client",
        "//test/client/utils",
        "@com_github_stretchr_testify//assert",
    ],
)
