load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "query_insert_bulk_test",
    srcs = ["query_insert_bulk_test.go"],
    deps = [
        "//common",
        "//data",
        "//src/client/v2:client",
        "//test/client/utils",
        "@com_github_stretchr_testify//assert",
    ],
)
