load("@io_bazel_rules_go//go:def.bzl", "go_test")

filegroup(
    name = "build",
    testonly = True,
    srcs = [
        ":schema_test",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "schema_test",
    srcs = [
        "utils_test.go",
        "workflow_schema_test.go",
    ],
    tags = ["schema"],
    deps = [
        "//src/client/v2:client",
        "//test/client/utils",
        "@com_github_stretchr_testify//assert",
    ],
)
