load("@io_bazel_rules_go//go:def.bzl", "go_test")

filegroup(
    name = "build",
    testonly = True,
    srcs = [
        ":z_post_test_test",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "z_post_test_test",
    srcs = [
        "post_test.go",
        "utils_test.go",
    ],
    deps = [
        "//src/client/v2:client",
        "//test/client/utils",
        "@com_github_stretchr_testify//assert",
    ],
)
