load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = ["shared.go"],
    importpath = "github.com/marvin-hansen/typedb-client-go/test/src/client",
    visibility = ["//visibility:public"],
)

go_test(
    name = "client_test",
    srcs = ["workflow_db_test.go"],
    embed = [":client"],
    deps = [
        "@com_github_marvin_hansen_go_typedb//src/client/v2:go_default_library",
        "@com_github_stretchr_testify//assert",
    ],
)
