load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "shared.go",
        "utils_query.go",
    ],
    importpath = "github.com/marvin-hansen/typedb-client-go/test/src/client",
    visibility = ["//visibility:public"],
)

go_test(
    name = "client_test",
    srcs = [
        "utils_test.go",
        "workflow_db_test.go",
        "workflow_query_match_test.go",
        "workflow_schema_test.go",
    ],
    embed = [":client"],
    deps = [
        "//src/client/v2:client",
        "@com_github_segmentio_ksuid//:ksuid",
        "@com_github_stretchr_testify//assert",
    ],
)
