load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "requests",
    srcs = [
        "request_attribute.go",
        "request_concept.go",
        "request_db.go",
        "request_logic.go",
        "request_proto_utils.go",
        "request_query.go",
        "request_relation.go",
        "request_rule.go",
        "request_schema.go",
        "request_session.go",
        "request_thing.go",
        "request_tx.go",
        "request_tx_stream.go",
        "request_type.go",
        "request_type_attribute.go",
        "request_type_er_relation.go",
        "request_type_role.go",
        "request_type_thing.go",
    ],
    importpath = "github.com/marvin-hansen/typedb-client-go/src/client/v2/requests",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//core",
        "//src/type/common_type",
        "//src/type/err_type",
    ],
)
